--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,6 @@ UpgradeLog*.htm
 
 # Microsoft Fakes
 FakesAssemblies/
+ChallongeNet.TestProject/app.config
+ChallongeNet.TestProject/Properties/Settings.settings
+ChallongeNet.TestProject/Properties/Settings.Designer.cs
